Add phone and email search support to find command
Co-authored-by: NihaalManaf <154662706+NihaalManaf@users.noreply.github.com>